--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background-color: black; /* Changement de couleur de fond en noir */
+            background-color: rgba(173, 173, 237, 0.68); /* Changement de couleur de fond en vert */
         }
 
         #bg-wrap {
@@ -37,56 +37,42 @@
 </head>
 <body>
     <div id="bg-wrap">
-        <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
-            <defs>
-                <radialGradient id="Gradient1" cx="50%" cy="50%" fx="0.441602%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(75, 0, 130, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(75, 0, 130, 0)"></stop>
-                </radialGradient>
-                <radialGradient id="Gradient2" cx="50%" cy="50%" fx="2.68147%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="23.5s" values="0%;3%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(0, 0, 128, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(0, 0, 128, 0)"></stop>
-                </radialGradient>
-                <radialGradient id="Gradient3" cx="50%" cy="50%" fx="0.836536%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="21.5s" values="0%;3%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(0, 128, 128, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(0, 128, 128, 0)"></stop>
-                </radialGradient>
-                <radialGradient id="Gradient4" cx="50%" cy="50%" fx="4.56417%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="23s" values="0%;5%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(0, 128, 0, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(0, 128, 0, 0)"></stop>
-                </radialGradient>
-                <radialGradient id="Gradient5" cx="50%" cy="50%" fx="2.65405%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="24.5s" values="0%;5%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(128, 0, 0, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(128, 0, 0, 0)"></stop>
-                </radialGradient>
-                <radialGradient id="Gradient6" cx="50%" cy="50%" fx="0.981338%" fy="50%" r=".5">
-                    <animate attributeName="fx" dur="25.5s" values="0%;5%;0%" repeatCount="indefinite"></animate>
-                    <stop offset="0%" stop-color="rgba(0, 0, 0, 1)"></stop>
-                    <stop offset="100%" stop-color="rgba(0, 0, 0, 0)"></stop>
-                </radialGradient>
-            </defs>
-            <rect x="13.744%" y="1.18473%" width="100%" height="100%" fill="url(#Gradient1)" transform="rotate(334.41 50 50)">
-                <animate attributeName="x" dur="20s" values="25%;0%;25%" repeatCount="indefinite"></animate>
-                <animate attributeName="y" dur="21s" values="0%;25%;0%" repeatCount="indefinite"></animate>
-                <animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="7s" repeatCount="indefinite"></animateTransform>
-            </rect>
-            <rect x="-2.17916%" y="35.4267%" width="100%" height="100%" fill="url(#Gradient2)" transform="rotate(255.072 50 50)">
-                <animate attributeName="x" dur="23s" values="-25%;0%;-25%" repeatCount="indefinite"></animate>
-                <animate attributeName="y" dur="24s" values="0%;50%;0%" repeatCount="indefinite"></animate>
-                <animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="12s" repeatCount="indefinite"></animateTransform>
-            </rect>
-            <rect x="9.00483%" y="14.5733%" width="100%" height="100%" fill="url(#Gradient3)" transform="rotate(139.903 50 50)">
-                <animate attributeName="x" dur="25s" values="0%;25%;0%" repeatCount="indefinite"></animate>
-                <animate attributeName="y" dur="12s" values="0%;25%;0%" repeatCount="indefinite"></animate>
-                <animateTransform attributeName="transform" type="rotate" from="360 50 50" to="0 50 50" dur="9s" repeatCount="indefinite"></animateTransform>
-            </rect>
-        </svg>
-    </div>
+  <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
+    <defs>
+
+      <radialGradient id="Blue1" cx="50%" cy="50%" r="0.5">
+        <stop offset="0%" stop-color="#b3e5fc" />
+        <stop offset="100%" stop-color="rgba(179, 229, 252, 0.2)" />
+      </radialGradient>
+      <radialGradient id="Blue2" cx="50%" cy="50%" r="0.5">
+        <stop offset="0%" stop-color="#81d4fa" />
+        <stop offset="100%" stop-color="rgba(129, 212, 250, 0.2)" />
+      </radialGradient>
+      <radialGradient id="Blue3" cx="50%" cy="50%" r="0.5">
+        <stop offset="0%" stop-color="#b2ebf2" />
+        <stop offset="100%" stop-color="rgba(178, 235, 242, 0.2)" />
+      </radialGradient>
+    </defs>
+
+
+    <circle cx="25" cy="30" r="35" fill="url(#Blue1)">
+      <animate attributeName="cx" values="25;75;25" dur="20s" repeatCount="indefinite" />
+      <animate attributeName="cy" values="30;70;30" dur="24s" repeatCount="indefinite" />
+    </circle>
+
+    <circle cx="70" cy="60" r="40" fill="url(#Blue2)">
+      <animate attributeName="cx" values="70;30;70" dur="28s" repeatCount="indefinite" />
+      <animate attributeName="cy" values="60;20;60" dur="26s" repeatCount="indefinite" />
+    </circle>
+
+    <circle cx="50" cy="50" r="45" fill="url(#Blue3)">
+      <animate attributeName="cx" values="50;50;50" dur="30s" repeatCount="indefinite" />
+      <animate attributeName="cy" values="50;50;50" dur="30s" repeatCount="indefinite" />
+    </circle>
+  </svg>
+</div>
+
+
 
     <div class="inputs">
         <div class="prof inputs">
