--- a/templates/index.html
+++ b/templates/index.html
@@ -39,37 +39,37 @@
     <div id="bg-wrap">
         <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
             <defs>
-                <radialGradient id="Blue1" cx="50%" cy="50%" r="0.5">
-                    <stop offset="0%" stop-color="#b3e5fc" />
-                    <stop offset="100%" stop-color="rgba(179, 229, 252, 0.2)" />
+                <radialGradient id="Gradient1" cx="50%" cy="50%" r="0.5">
+                    <stop offset="0%" stop-color="#684f6d" />
+                    <stop offset="100%" stop-color="rgba(104, 79, 109, 0.2)" />
                 </radialGradient>
-                <radialGradient id="Blue2" cx="50%" cy="50%" r="0.5">
-                    <stop offset="0%" stop-color="#81d4fa" />
-                    <stop offset="100%" stop-color="rgba(129, 212, 250, 0.2)" />
+                <radialGradient id="Gradient2" cx="50%" cy="50%" r="0.5">
+                    <stop offset="0%" stop-color="#95b48e" />
+                    <stop offset="100%" stop-color="rgba(149, 180, 142, 0.2)" />
                 </radialGradient>
-                <radialGradient id="Blue3" cx="50%" cy="50%" r="0.5">
-                    <stop offset="0%" stop-color="#b2ebf2" />
-                    <stop offset="100%" stop-color="rgba(178, 235, 242, 0.2)" />
+                <radialGradient id="Gradient3" cx="50%" cy="50%" r="0.5">
+                    <stop offset="0%" stop-color="#99ad95" />
+                    <stop offset="100%" stop-color="rgba(153, 173, 149, 0.2)" />
                 </radialGradient>
             </defs>
 
-
-            <circle cx="25" cy="30" r="35" fill="url(#Blue1)">
+            <circle cx="25" cy="30" r="35" fill="url(#Gradient1)">
                 <animate attributeName="cx" values="25;75;25" dur="20s" repeatCount="indefinite" />
                 <animate attributeName="cy" values="30;70;30" dur="24s" repeatCount="indefinite" />
             </circle>
 
-            <circle cx="70" cy="60" r="40" fill="url(#Blue2)">
+            <circle cx="70" cy="60" r="40" fill="url(#Gradient2)">
                 <animate attributeName="cx" values="70;30;70" dur="28s" repeatCount="indefinite" />
                 <animate attributeName="cy" values="60;20;60" dur="26s" repeatCount="indefinite" />
             </circle>
 
-            <circle cx="50" cy="50" r="45" fill="url(#Blue3)">
+            <circle cx="50" cy="50" r="45" fill="url(#Gradient3)">
                 <animate attributeName="cx" values="50;50;50" dur="30s" repeatCount="indefinite" />
                 <animate attributeName="cy" values="50;50;50" dur="30s" repeatCount="indefinite" />
             </circle>
         </svg>
     </div>
+
 
 
     <div class="inputs">
@@ -90,6 +90,7 @@
         <div class="student inputs">
             <div class="square">
                 <div class="chat">
+
                     <div class="messages">
                         <div class="messages-content"></div>
                     </div>
