--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -56,10 +56,13 @@ body, html {
 
 
 body .chat {
-  width: 300px;
-  height: 80vh;
+  width: 400px;
+  height: 70vh;
   background-color: transparent;
   overflow: hidden;
+  position: relative;
+   margin-left: -30px;
+   margin-bottom: -75px
 }
 body .chat-title {
   background-color: black;
@@ -84,7 +87,7 @@ body .chat-title .avatar {
 }
 body .chat-title .avatar img {
   border-radius: 50%;
-  width: 30px;
+  width: 80px;
   height: 30px;
 }
 body .messages {
@@ -99,7 +102,7 @@ body .messages-content {
 }
 body .messages-content .message {
   max-width: calc(100% - 76px);
-  padding: 8px;
+  padding: 10px;
   margin: 8px 0 8px 12px;
   border-radius: 5px;
   background-color: #d6cad4;
@@ -164,38 +167,57 @@ body .messages-content .message.typing span::after {
   animation-delay: -0.3s;
 }
 body .action-box {
+  position: absolute;
+  bottom: 0px;      /* place en bas */
+  left: 0px;
   background-color: #d6cad4;
-  width: 100%;
-  height: 40px;
-  border-radius: 6px;
+  width: 90%;
+  height: 80px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center; /* centre verticalement */
+  padding: 10px;
 }
-body .action-box-input, body .action-box-submit {
-  box-sizing: border-box;
-  border: 0;
-  float: left;
-  font-family: 'Open Sans', sans-serif;
-}
+
 body .action-box-input {
-  width: calc(100% - 40px);
-  height: 20px;
+  width: calc(100% - 90px);
+  height: 60px;
   background-color: transparent;
-  resize: none;
   color: #1c1c1c;
-  margin: 10px 0;
-  padding: 0 10px;
-  line-height: 20px;
+  padding: 10px 15px;
+  border-radius: 90px;
   font-size: 16px;
-  letter-spacing: 1px;
-  overflow: hidden;
+  line-height: 1.5;
+  border: none;
+  resize: none;
+  box-sizing: border-box;
 }
-body .action-box-input::-webkit-input-placeholder {
-  line-height: 20px;
-  font-size: 13px;
-}
-body .action-box-submit {
-  width: 60px;
-  height: 40px;
-  background-color: #7E72A140;
-  color: white;
+#recordButton {
+  position: absolute;
+  font-size: 28px;
+  right: 12px;
+  top: 28px;
+  background-color: Transparent;
+  color: #7E72A1;
+  padding: 10px;
+  border-radius: 6px;
   cursor: pointer;
 }
+
+body .action-box-submit {
+  width: 60px;
+  height: 45px;
+  margin-left: 10px;
+  background-color: #7E72A1;
+  color: white;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+body .action-box-submit:hover {
+  background-color: #5e5383;
+}
+
+
